--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "debug": "qode --inspect ./dist/index.js"
   },
   "dependencies": {
-    "@nodegui/react-nodegui": "^0.9.0",
-    "open": "^7.2.1",
-    "react": "^16.13.1"
+    "@nodegui/nodegui": "^0.27.0",
+    "@nodegui/react-nodegui": "^0.10.0",
+    "node-fetch": "^2.6.1",
+    "node-mpv": "^2.0.0-beta.0",
+    "react": "^16.13.1",
+    "react-router": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -23,7 +26,9 @@
     "@babel/preset-typescript": "^7.10.4",
     "@nodegui/packer": "^1.4.1",
     "@types/node": "^14.11.1",
+    "@types/node-fetch": "^2.5.8",
     "@types/react": "^16.9.49",
+    "@types/react-router": "^5.1.11",
     "@types/webpack-env": "^1.15.3",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
